# ChangeLog for media-sound/gpodder
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/gpodder/ChangeLog,v 1.14 2008/03/04 21:02:03 hanno Exp $

*gpodder-0.11.0 (04 Mar 2008)

  04 Mar 2008; Hanno Boeck <hanno@gentoo.org> +gpodder-0.11.0.ebuild:
  Version bump.

*gpodder-0.10.1 (10 Nov 2007)

  10 Nov 2007; Hanno Boeck <hanno@gentoo.org> +gpodder-0.10.1.ebuild:
  Version bump.

  08 Nov 2007; Christoph Mende <angelos@gentoo.org> gpodder-0.9.5.ebuild:
  Stable on amd64 wrt bug #197180

  01 Nov 2007; Markus Meier <maekke@gentoo.org> gpodder-0.9.5.ebuild:
  x86 stable, bug #197180

  21 Sep 2007; Hanno Boeck <hanno@gentoo.org> gpodder-0.9.5.ebuild:
  Add missing deps.

*gpodder-0.9.5 (18 Sep 2007)

  18 Sep 2007; Hanno Boeck <hanno@gentoo.org> +gpodder-0.9.5.ebuild:
  Version bump.

*gpodder-0.9.4 (29 Jul 2007)

  29 Jul 2007; Hanno Boeck <hanno@gentoo.org> +gpodder-0.9.4.ebuild:
  Version bump.

*gpodder-0.9.2 (11 Jun 2007)

  11 Jun 2007; Hanno Boeck <hanno@gentoo.org> +gpodder-0.9.2.ebuild:
  Version bump.

*gpodder-0.9.1 (14 May 2007)

  14 May 2007; Hanno Boeck <hanno@gentoo.org> +gpodder-0.9.1.ebuild:
  Version bump.

*gpodder-0.9.0 (02 Apr 2007)

  02 Apr 2007; Hanno Boeck <hanno@gentoo.org> +gpodder-0.9.0.ebuild:
  Version bump.

*gpodder-0.8.9 (14 Feb 2007)

  14 Feb 2007; Hanno Boeck <hanno@gentoo.org> +gpodder-0.8.9.ebuild:
  Version bump.

  23 Jan 2007; Steve Dibb <beandog@gentoo.org> gpodder-0.7.ebuild,
  gpodder-0.8.0.ebuild:
  Add ~amd64, bug 163397

*gpodder-0.8.0 (28 Jul 2006)

  28 Jul 2006; Hanno Boeck <hanno@gentoo.org> +gpodder-0.8.0.ebuild:
  Version bump.

*gpodder-0.7 (28 Jun 2006)

  28 Jun 2006; Hanno Boeck <hanno@gentoo.org> +metadata.xml,
  +gpodder-0.7.ebuild:
  Initial commit.
