@@ -3,18 +3,20 @@ Hash: SHA1
 
 DIST gpodder-0.10.1.tar.gz 186559 RMD160 a5d5fc5f9076192cfb6be732c47e19209aef0869 SHA1 bdca531848fc0f8c8c57cfaeb84f15f8cac22389 SHA256 0471215aadeb3b188df5f836bb88e9d95371054615632991dc91317974220193
 DIST gpodder-0.11.0.tar.gz 275509 RMD160 97007c955f86005f649f453de802506d5cf8b0b1 SHA1 7d2a12aca46da433cfd5d25785c63c3e4d8a9582 SHA256 e0e873aff0cdf4f9fb987311d76ccaf75b525766e2eb1c062d3320d0803588d1
+DIST gpodder-0.11.1.tar.gz 290575 RMD160 c1d9fa3a429610069760de3b92a8a096668b36ca SHA1 839c79c0b9b372523e8c0c05efeec1a06ddbed37 SHA256 9d0e7a72e6563b251366cdad9d9b50b29c3ab0962c097b4b60ea917899c90efb
 DIST gpodder-0.9.4.tar.gz 199268 RMD160 c4afb0d97af787b81f1f4fd13d9743fc39069815 SHA1 eb7190f9ba7f845bc7b70a7ee7727e14ae81a8a3 SHA256 b0653f0821b044cee811678035ad6bc34a83d981086e3961ddba35bc3749cfda
 DIST gpodder-0.9.5.tar.gz 203635 RMD160 d69f7b30e90b18403314af85d41b05759ea7ebaf SHA1 a2fded9f84319b49d503ed93b4bdf594dba68cb0 SHA256 9a5c29bb20bf19aefd730165fe7af03f84aa19694d1085e6673e4098167be7d2
 EBUILD gpodder-0.10.1.ebuild 1006 RMD160 b6d1b5642a41b6e1f44c4734f1351905a10fab39 SHA1 5d5f211afb30f6c7cd946e16dbebd950f9988138 SHA256 b7d601567def4ec505fd27e2aebdd432473fe95ba0051a6847bfded1713903fa
 EBUILD gpodder-0.11.0.ebuild 1170 RMD160 5cd553cd5c420c7a619cf73f98d6bf5c0342d28b SHA1 b619d78d1ecf54634a088bd85e3cbf234f4b1cc1 SHA256 295de2d8c8aeadf6108b31b3388397181f5b5e5269f8dfc1a96f77287415430a
+EBUILD gpodder-0.11.1.ebuild 1221 RMD160 29931f77699cd31169cbafd6ba9e356c602b954e SHA1 222904929632bfd2826389bd9750547043fda892 SHA256 76c2937d9a4552637e5ed73298c43d0be17e752b36400c7e1daddcb8bc45b24e
 EBUILD gpodder-0.9.4.ebuild 684 RMD160 13e89dc348d4a9ca44655c05ed701b6e18638fcc SHA1 0efc521f88ba9f7ab067ffeab8ad17a26f15724d SHA256 6c4663fcc799be32a6c9de65c337e498dd42b9429942903a736a0aa5318e56da
 EBUILD gpodder-0.9.5.ebuild 789 RMD160 4a19aa55e0193b6de4facaeb85878abff212ce0c SHA1 654b18a11b3b7240f64a731162f92deab22b5a0c SHA256 8d4326e711665a0d6b3b0c38c33965e4da81450f5524f91c06a8e3b23b43d398
-MISC ChangeLog 1802 RMD160 83e07b892e05431652f2ebb42ca0ebeb42ece2f4 SHA1 a572c001fbfcea00bb0e2a3e83f554d37402632d SHA256 ca74ef8a982708064aa8f43cfa053b49d3f8d7789e1a241bd1ff622428557213
+MISC ChangeLog 1931 RMD160 4f3c12d27dafe26c086a46da5ab1b755e64bbd65 SHA1 be587fe34fa51124c0e65c56de0a5667c7863310 SHA256 6958ecb62f3d087e8e25fcd2f5780ee1ca54dda019053990b5c9c05167f202a3
 MISC metadata.xml 217 RMD160 3b01d5dab901ee93217f72b711954d3cccbb1717 SHA1 e304788b60dd2cf214d360a21d267e8635474d98 SHA256 2f5dfc1eb79d2d9ee02663da6e1449f499c3a37b7f4cc2391e18d7789a314669
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.7 (GNU/Linux)
+Version: GnuPG v2.0.9 (GNU/Linux)
 
-iD8DBQFHzbjar2QksT29OyARAuuCAJ9zuoBTDN2Qn68jfKf1BCGBvaz27ACgoEBq
-y6aWTRVTZWxthJQ4otd6okw=
-=mK+h
+iEYEARECAAYFAkfz8ZsACgkQr2QksT29OyBVMQCgmw3yKY/6Ib2c+RbaUHl32qSi
+KIkAnAoMomPo34NgT7bsf5n5GpbiRfwc
+=uJNr
 -----END PGP SIGNATURE-----
