@@ -1,6 +1,11 @@
 # ChangeLog for media-sound/gpodder
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/gpodder/ChangeLog,v 1.14 2008/03/04 21:02:03 hanno Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/gpodder/ChangeLog,v 1.15 2008/04/02 20:50:16 hanno Exp $
+
+*gpodder-0.11.1 (02 Apr 2008)
+
+  02 Apr 2008; Hanno Boeck <hanno@gentoo.org> +gpodder-0.11.1.ebuild:
+  Bump and notify support.
 
 *gpodder-0.11.0 (04 Mar 2008)
 
